added dinosaur array/loop/domprint and css styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <h1>js-arrays</h1>
         <p>inclass js-arrays</p>
 
+        
+        <div id="dinoDiv" class="container"></div>
+
         <script src="./main.js"></script>
     </body>
 </html>
